RESOLVED FIXED200283
Element.outerHTML is missing attribute prefixes in some cases in HTML documents
https://bugs.webkit.org/show_bug.cgi?id=200283
Summary Element.outerHTML is missing attribute prefixes in some cases in HTML documents
Chris Dumez
Reported 2019-07-30 14:37:44 PDT
Element.outerHTML is missing attribute prefixes in some cases in HTML documents.
Attachments
WIP Patch (6.41 KB, patch)
2019-07-30 14:48 PDT, Chris Dumez
no flags
WIP Patch (7.71 KB, patch)
2019-07-30 15:22 PDT, Chris Dumez
no flags
WIP Patch (7.86 KB, patch)
2019-07-30 15:40 PDT, Chris Dumez
no flags
Patch (10.09 KB, patch)
2019-07-30 15:46 PDT, Chris Dumez
no flags
Patch (11.74 KB, patch)
2019-07-30 16:33 PDT, Chris Dumez
rniwa: review+
Chris Dumez
Comment 1 2019-07-30 14:48:55 PDT
Created attachment 375181 [details] WIP Patch
Chris Dumez
Comment 2 2019-07-30 15:22:37 PDT
Created attachment 375187 [details] WIP Patch
Chris Dumez
Comment 3 2019-07-30 15:40:45 PDT
Created attachment 375189 [details] WIP Patch
Chris Dumez
Comment 4 2019-07-30 15:46:35 PDT
Chris Dumez
Comment 5 2019-07-30 16:33:25 PDT
Ryosuke Niwa
Comment 6 2019-07-31 00:06:55 PDT
Comment on attachment 375194 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=375194&action=review > Source/WebCore/editing/MarkupAccumulator.cpp:562 > + AtomStringImpl* foundNS = namespaces && attribute.prefix().impl() ? namespaces->get(attribute.prefix().impl()) : 0; I know you're just moving code around but maybe use nullptr? > Source/WebCore/editing/MarkupAccumulator.cpp:565 > + if (AtomStringImpl* prefix = namespaces ? namespaces->get(attribute.namespaceURI().impl()) : 0) Ditto.
Chris Dumez
Comment 7 2019-07-31 08:10:37 PDT
(In reply to Ryosuke Niwa from comment #6) > Comment on attachment 375194 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=375194&action=review > > > Source/WebCore/editing/MarkupAccumulator.cpp:562 > > + AtomStringImpl* foundNS = namespaces && attribute.prefix().impl() ? namespaces->get(attribute.prefix().impl()) : 0; > > I know you're just moving code around but maybe use nullptr? > > > Source/WebCore/editing/MarkupAccumulator.cpp:565 > > + if (AtomStringImpl* prefix = namespaces ? namespaces->get(attribute.namespaceURI().impl()) : 0) > > Ditto. Sure thing.
Chris Dumez
Comment 8 2019-07-31 08:12:46 PDT
Radar WebKit Bug Importer
Comment 9 2019-07-31 08:13:19 PDT
Note You need to log in before you can comment on or make changes to this bug.